--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">StarWars</string>
+    <string name="error_empty_data">Sorry!! Empty data</string>
+    <string name="error_operation">Error Operation</string>
+    <string name="error_data">Error Data</string>
 </resources>
